kustomize/kafdrop-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    io.kompose.service: kafdrop
  name: kafdrop
  namespace: data
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      io.kompose.service: kafdrop
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
      labels:
        io.kompose.service: kafdrop
    spec:
      containers:
      - env:
        - name: KAFKA_BROKERCONNECT
          value: kafka:29092
        image: obsidiandynamics/kafdrop:3.27.0
        imagePullPolicy: IfNotPresent
        name: kafkadrop
        ports:
        - containerPort: 9000
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
