kustomize/kafdrop-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kafdrop-svc
  name: kafdrop-svc
  namespace: data
spec:
  ports:
    - name: "19000"
      port: 19000
      targetPort: 9000
  selector:
    app: kafdrop
  type: ClusterIP
