kustomize/kafka-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kafka
  name: kafka-svc
spec:
  ports:
    - name: "9092"
      port: 9092
      targetPort: 9092
  selector:
    app: kafka
  type: ClusterIP
