kustomize/zookeeper-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zookeeper
  name: zookeeper-svc
spec:
  ports:
    - name: "2181"
      port: 2181
      targetPort: 2181
  selector:
    app: zookeeper
  type: ClusterIP
